Fixed navbar for all screen sizes; fix landscape mode for mobile devices; fixed switch icon not showing properly on mobile

--- a/css/size/extra-small.css
+++ b/css/size/extra-small.css
@@ -12,7 +12,6 @@ body {
    flex-direction: column;
    justify-content: center;
    text-align: center;
-   align-items: flex-start;
    margin: auto;
    font-family: 'Open Sans', sans-serif;
    line-height: 36px;
@@ -32,67 +31,89 @@ body {
 
 /* ============= NAVBAR ============= */
 
-/* On large screens, navbar should be below profile pic */
-.nav-wrapper {
-   order: 2;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   margin: auto;
-}
-
-/* Basic navbar settings */
+/* Basic settings */
 nav {
-   position: sticky;
+   position: fixed;
    width: 100%;
-   height: 10vh;
    display: flex;
-   flex-direction: row;
+   flex-direction: column;
    justify-content: center;
-   align-items: center;
+   align-items: left;
    transition: all 0.2s;
    overflow: hidden;
-}
-
-/* Makes navbar sticky after scrolling down far enough */
-.navbar-fixed-top {
    background-color: var(--main-bg-color);
-   position: fixed;
-   top: 0;
-   box-shadow: rgb(36 41 51 / 15%) 0px 5px 10px 0;
 }
 
-/* Navlink container settings */
-.navlink-cont {
-   width: 100%;
-   display: block;
+/* Navbar header (logo + menu button on small screens) */
+nav .navbar-header {
+   display: flex;
    flex-direction: row;
-   flex-wrap: nowrap;
-   justify-content: center;
    align-items: center;
+   justify-content: space-between;
+   margin-top: 0.75em;
+   margin-bottom: 0.75em;
+   margin-left: 1.5em;
+   margin-right: 1.5em;
 }
 
-/* Navlink settings */
+.navbar-header .navbar-header-right {
+   display: flex;
+   flex-direction: row;
+   /* align-items: flex-end; */
+   justify-content: right;
+}
+
+/* Need this here to center the menu button */
+a.menu {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+
+/* Basic navbar link settings */ 
 .navlink {
    color: var(--main-text-color);
-   margin: 0 1em;
+   margin-left: 1.5em;
+   margin-right: 1.5em;
    transition: all 0.2s;
 }
 
-/* Change theme icon cursor */
+/* Hide sun/moon icon on small screens... */
 #theme-toggle-icon {
+   display: none;
+}
+
+#theme-toggle-text {
    cursor: pointer;
 }
 
-/* Hide elements meant for smaller screens */
-.navbar-header a.menu {
-   display: none;
+/* == ANIMATION STUFF == */
+
+/* Hide links when navbar closed */
+#navlink-cont.isClosed {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-evenly;
+   text-align: left;
+   opacity: 0;
+   visibility: hidden;
+   height: 0;
+   transition: opacity 0.35s, visibility 0.35s, height 0.35s;
+   overflow: hidden;
+   box-shadow: none;
 }
-#theme-toggle-text {
-   display: none;
-}
-.navbar-header {
-   display: none;
+
+/* Show links when navbar open */
+#navlink-cont.isOpen {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-evenly;
+   text-align: left;
+   opacity: 1;
+   visibility: visible;
+   height: 15em;
+   transition: opacity 0.35s, visibility 0.35s, height 0.35s;
+   box-shadow: var (--navbar-shadow-color), 0px 20px 10px 0px;
 }
 
 /* ============= THEME BUTTON SETTINGS ============= */
@@ -103,6 +124,10 @@ button.theme {
    transform: translateY(10%);
    background-color: var(--main-bg-color);
    transition: all 0.2s;
+}
+
+.themeIcon {
+   color: var(--link-base-color);
 }
 
 /* Hides the moon icon and only shows the sun icon
@@ -141,15 +166,14 @@ a:hover {
    visibility: visible;
 }
 
-/* ============= PROFILE ============= */
+/* ============= SECTION: PROFILE ============= */
 
 #profile-section {
-   height: 90vh;
+   height: 85vh;
    top: 0;
    margin: 0 auto;
    align-items: center;
    max-width: 60%;
-   order: 1;
 }
 
 .profile-name {
@@ -158,13 +182,14 @@ a:hover {
    font-size: 40px;
    font-weight: 400;
    letter-spacing: 6px;
+   line-height: 1.1em;
    text-transform: uppercase;
    color: var(--profile-name-color);
 }
 
 .profile-pic {
    border-radius: 100%;
-   max-width: 50%;
+   max-width: 110%;
 }
 
 /* Tiny description below my name */
@@ -173,6 +198,7 @@ a:hover {
    margin: 1em;
    display: flex;
    flex-direction: row;
+   line-height: 1.3em;
 }
 
 /* Links below my name */
@@ -201,7 +227,7 @@ a:hover {
 
 .section {
    margin: 5vh auto;
-   max-width: 80%;
+   max-width: 100%;
 }
 
 .section-header {
@@ -211,6 +237,7 @@ a:hover {
    line-height: 58px;
    color: var(--link-base-color);
    padding-top: 12vh;
+   margin-bottom: ;
 }
 
 .section-subheader {
@@ -241,58 +268,62 @@ a:hover {
 .section-content-text {
    font-family: 'Open Sans', sans-serif;
    letter-spacing: 1px;
-   line-height: 33px;
+   line-height: 1.75em;
    color: var(--main-text-color);
    margin-bottom: 1.5em;
 }
 
 /* ============= SECTION: ABOUT ============= */
 #about {
-   max-width: 60%;
-   order: 3;
+   max-width: 90%;
 }
 
 /* ============= SECTION: WORK ============= */
 #work {
-   order: 4;
-   max-width: 60%;
+   max-width: 90%;
 }
 
 .work-desc-list {
-   margin-top: 0px;
+   margin-top: 0.5em;
+   margin-left: -0.85em;
 }
 
 .work-subtitle {
+   margin-top: 0.25em;
    margin-bottom: 0.25em;
+   line-height: 1.4em;
 }
 
 .work-dates {
-   display: none;
+   display: inline;
 }
 
 /* ============= SECTION: COURSEWORK ============= */
 
 #coursework {
-   order: 5;
-   max-width: 60%;
+   max-width: 100%;
    margin-bottom: 0px;
 }
 
 .course-class-container {
    display: flex;
-   flex-wrap: nowrap;
-   flex-direction: row;
+   flex-direction: column;
+   align-items: center;
 }
 
 .course-class-col {
    flex: 100%;
-   max-width: 50%;
+   max-width: 100%;
    text-align: center;
-   margin-top: 0px;
+   margin-bottom: 2em;
 }
 
 .course-class-col-header {
    color: var(--main-subtitle-color);
+}
+
+.course-class-entry {
+   max-width: 100%
 }
 
 /* ============= SECTION: PROJECTS ============= */
