--- a/css/theme/dark.css
+++ b/css/theme/dark.css
@@ -5,5 +5,6 @@
     --main-subtitle-color: #8FBCBB;
     --link-base-color: #88C0D0;
     --link-hover-color: #5E81AC;
-    --section-content-title: 
+    --section-content-title: #88C0D0;
+    --navbar-shadow-color: #373e4d;
  } 
