--- a/css/theme/light.css
+++ b/css/theme/light.css
@@ -6,4 +6,5 @@
     --link-base-color: #5e81ac;
     --link-hover-color: #88c0d0;
     --section-content-title: #5e81ac;
+    --navbar-shadow-color: #e0e3e7;
 }
